--- a/package.json
+++ b/package.json
@@ -14,25 +14,25 @@
     "types:svelte": "svelte-check --output=human"
   },
   "devDependencies": {
-    "@eslint/js": "^9.18.0",
-    "@octokit/core": "^6.1.3",
+    "@eslint/js": "^9.22.0",
+    "@octokit/core": "^6.1.4",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
     "@tsconfig/svelte": "^5.0.4",
     "date-fns": "^4.1.0",
-    "eslint": "^9.18.0",
-    "eslint-config-prettier": "^10.0.1",
-    "eslint-plugin-svelte": "^3.0.0-next.15",
-    "globals": "^15.14.0",
-    "idb": "^8.0.1",
-    "prettier": "^3.4.2",
+    "eslint": "^9.22.0",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-svelte": "^3.3.3",
+    "globals": "^16.0.0",
+    "idb": "^8.0.2",
+    "prettier": "^3.5.3",
     "prettier-plugin-svelte": "^3.3.3",
-    "sass-embedded": "^1.83.4",
-    "svelte": "^5.18.0",
-    "svelte-check": "^4.1.4",
-    "svelte-eslint-parser": "^1.0.0-next.13",
+    "sass-embedded": "^1.86.0",
+    "svelte": "^5.23.2",
+    "svelte-check": "^4.1.5",
+    "svelte-eslint-parser": "^1.1.0",
     "tslib": "^2.8.1",
-    "typescript": "^5.7.3",
-    "typescript-eslint": "^8.20.0",
-    "vite": "^6.0.7"
+    "typescript": "^5.8.2",
+    "typescript-eslint": "^8.27.0",
+    "vite": "^6.2.2"
   }
 }
