--- a/package.json
+++ b/package.json
@@ -13,30 +13,31 @@
     "lint": "yarn lint:oxlint; yarn lint:eslint",
     "lint:oxlint": "oxlint src/**/*.{js,ts,svelte}",
     "lint:eslint": "eslint src/**/*.{js,ts,svelte}",
-    "format": "prettier --write index.html src/**/*.{ts,svelte}"
+    "format": "prettier --write index.html src/**/*.{js,ts,svelte}"
   },
   "devDependencies": {
-    "@eslint/js": "^9.29.0",
+    "@eslint/js": "^9.30.0",
     "@octokit/core": "^7.0.2",
+    "@prettier/plugin-oxc": "^0.0.4",
     "@sveltejs/vite-plugin-svelte": "^5.1.0",
     "@tsconfig/svelte": "^5.0.4",
     "date-fns": "^4.1.0",
-    "eslint": "^9.29.0",
+    "eslint": "^9.30.0",
     "eslint-config-prettier": "^10.1.5",
-    "eslint-plugin-oxlint": "^1.3.0",
-    "eslint-plugin-svelte": "^3.9.3",
+    "eslint-plugin-oxlint": "^1.4.0",
+    "eslint-plugin-svelte": "^3.10.1",
     "globals": "^16.2.0",
     "idb": "^8.0.3",
     "lightningcss": "^1.30.1",
-    "oxlint": "^1.3.0",
-    "prettier": "^3.6.0",
+    "oxlint": "^1.4.0",
+    "prettier": "^3.6.2",
     "prettier-plugin-svelte": "^3.4.0",
-    "svelte": "^5.34.7",
+    "svelte": "^5.34.9",
     "svelte-check": "^4.2.2",
     "svelte-eslint-parser": "^1.2.0",
     "tslib": "^2.8.1",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.34.1",
-    "vite": "^6.3.5"
+    "typescript-eslint": "^8.35.1",
+    "vite": "^7.0.0"
   }
 }
