--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
   "devDependencies": {
     "@eslint/js": "^9.32.0",
     "@octokit/core": "^7.0.3",
-    "@prettier/plugin-oxc": "^0.0.4",
     "@sveltejs/vite-plugin-svelte": "^6.1.0",
+    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@tsconfig/svelte": "^5.0.4",
     "date-fns": "^4.1.0",
     "eslint": "^9.32.0",
