--- a/package.json
+++ b/package.json
@@ -11,33 +11,34 @@
     "types:typescript": "tsc --noEmit",
     "types:svelte": "svelte-check --output=human",
     "lint": "yarn lint:oxlint; yarn lint:eslint",
-    "lint:oxlint": "oxlint src/**/*.{js,ts,svelte}",
-    "lint:eslint": "eslint src/**/*.{js,ts,svelte}",
+    "lint:oxlint": "time oxlint --type-aware src/**/*.{js,ts,svelte}",
+    "lint:eslint": "time eslint src/**/*.{js,ts,svelte}",
     "format": "prettier --write index.html src/**/*.{js,ts,svelte}"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
     "@octokit/core": "^7.0.3",
-    "@sveltejs/vite-plugin-svelte": "^6.1.1",
+    "@sveltejs/vite-plugin-svelte": "^6.1.2",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@tsconfig/svelte": "^5.0.4",
     "date-fns": "^4.1.0",
     "eslint": "^9.33.0",
     "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-oxlint": "^1.11.1",
+    "eslint-plugin-oxlint": "^1.11.2",
     "eslint-plugin-svelte": "^3.11.0",
     "globals": "^16.3.0",
     "idb": "^8.0.3",
     "lightningcss": "^1.30.1",
-    "oxlint": "^1.11.1",
+    "oxlint": "^1.12.0",
+    "oxlint-tsgolint": "^0.0.3",
     "prettier": "^3.6.2",
     "prettier-plugin-svelte": "^3.4.0",
-    "svelte": "^5.38.0",
+    "svelte": "^5.38.1",
     "svelte-check": "^4.3.1",
     "svelte-eslint-parser": "^1.3.1",
     "tslib": "^2.8.1",
     "typescript": "^5.9.2",
-    "typescript-eslint": "^8.39.0",
-    "vite": "^7.1.1"
+    "typescript-eslint": "^8.39.1",
+    "vite": "^7.1.2"
   }
 }
