--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "github-releases-feed",
   "version": "0.0.1",
   "type": "module",
-  "packageManager": "yarn@4.9.2",
+  "packageManager": "yarn@4.9.4",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -12,7 +12,7 @@
     "types:svelte": "svelte-check --output=human",
     "lint": "yarn lint:oxlint; yarn lint:eslint",
     "lint:oxlint": "time oxlint --type-aware src/**/*.{js,ts,svelte}",
-    "lint:eslint": "time eslint src/**/*.{js,ts,svelte}",
+    "lint:eslint": "time eslint --concurrency=auto src/**/*.{js,ts,svelte}",
     "format": "prettier --write index.html src/**/*.{js,ts,svelte}"
   },
   "devDependencies": {
@@ -24,21 +24,21 @@
     "date-fns": "^4.1.0",
     "eslint": "^9.34.0",
     "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-oxlint": "^1.12.0",
+    "eslint-plugin-oxlint": "^1.14.0",
     "eslint-plugin-svelte": "^3.11.0",
     "globals": "^16.3.0",
     "idb": "^8.0.3",
     "lightningcss": "^1.30.1",
-    "oxlint": "^1.12.0",
-    "oxlint-tsgolint": "^0.0.4",
+    "oxlint": "^1.14.0",
+    "oxlint-tsgolint": "^0.1.5",
     "prettier": "^3.6.2",
     "prettier-plugin-svelte": "^3.4.0",
-    "svelte": "^5.38.2",
+    "svelte": "^5.38.6",
     "svelte-check": "^4.3.1",
     "svelte-eslint-parser": "^1.3.1",
     "tslib": "^2.8.1",
     "typescript": "^5.9.2",
-    "typescript-eslint": "^8.40.0",
+    "typescript-eslint": "^8.41.0",
     "vite": "^7.1.3"
   }
 }
