--- a/package.json
+++ b/package.json
@@ -2,27 +2,28 @@
   "name": "github-releases-feed",
   "version": "0.0.1",
   "type": "module",
-  "packageManager": "yarn@4.9.4",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "types": "yarn types:typescript; yarn types:svelte",
+    "types": "pnpm types:typescript; pnpm types:svelte",
     "types:typescript": "tsc --noEmit",
     "types:svelte": "svelte-check --output=human",
-    "lint": "yarn lint:oxlint; yarn lint:eslint",
-    "lint:oxlint": "time oxlint --type-aware src/**/*.{js,ts,svelte}",
-    "lint:eslint": "time eslint --concurrency=auto src/**/*.{js,ts,svelte}",
+    "lint": "pnpm lint:oxlint; pnpm lint:eslint",
+    "lint:oxlint": "oxlint --type-aware src/**/*.{js,ts,svelte}",
+    "lint:eslint": "eslint --concurrency=auto src/**/*.{js,ts,svelte}",
     "format": "prettier --write index.html src/**/*.{js,ts,svelte}"
   },
   "devDependencies": {
-    "@eslint/js": "^9.34.0",
+    "@eslint/js": "^9.35.0",
     "@octokit/core": "^7.0.3",
+    "@octokit/graphql": "^9.0.1",
+    "@octokit/request-error": "^7.0.0",
     "@sveltejs/vite-plugin-svelte": "^6.1.4",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@tsconfig/svelte": "^5.0.5",
     "date-fns": "^4.1.0",
-    "eslint": "^9.34.0",
+    "eslint": "^9.35.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-oxlint": "^1.14.0",
     "eslint-plugin-svelte": "^3.12.1",
