--- a/package.json
+++ b/package.json
@@ -15,31 +15,31 @@
     "format": "prettier --write index.html src/**/*.{js,ts,svelte}"
   },
   "devDependencies": {
-    "@eslint/js": "^9.36.0",
-    "@octokit/core": "^7.0.4",
-    "@octokit/graphql": "^9.0.1",
-    "@octokit/request-error": "^7.0.0",
-    "@sveltejs/vite-plugin-svelte": "^6.2.1",
-    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
-    "@tsconfig/svelte": "^5.0.5",
-    "date-fns": "^4.1.0",
-    "eslint": "^9.36.0",
-    "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-oxlint": "^1.18.0",
-    "eslint-plugin-svelte": "^3.12.4",
-    "globals": "^16.4.0",
-    "idb": "^8.0.3",
-    "lightningcss": "^1.30.1",
-    "oxlint": "^1.18.0",
-    "oxlint-tsgolint": "^0.2.0",
-    "prettier": "^3.6.2",
-    "prettier-plugin-svelte": "^3.4.0",
-    "svelte": "^5.39.6",
-    "svelte-check": "^4.3.2",
-    "svelte-eslint-parser": "^1.3.3",
-    "tslib": "^2.8.1",
-    "typescript": "^5.9.2",
-    "typescript-eslint": "^8.44.1",
-    "vite": "^7.1.7"
+    "@eslint/js": "9.36.0",
+    "@octokit/core": "7.0.4",
+    "@octokit/graphql": "9.0.1",
+    "@octokit/request-error": "7.0.0",
+    "@sveltejs/vite-plugin-svelte": "6.2.1",
+    "@trivago/prettier-plugin-sort-imports": "5.2.2",
+    "@tsconfig/svelte": "5.0.5",
+    "date-fns": "4.1.0",
+    "eslint": "9.36.0",
+    "eslint-config-prettier": "10.1.8",
+    "eslint-plugin-oxlint": "1.18.0",
+    "eslint-plugin-svelte": "3.12.4",
+    "globals": "16.4.0",
+    "idb": "8.0.3",
+    "lightningcss": "1.30.1",
+    "oxlint": "1.18.0",
+    "oxlint-tsgolint": "0.2.0",
+    "prettier": "3.6.2",
+    "prettier-plugin-svelte": "3.4.0",
+    "svelte": "5.39.6",
+    "svelte-check": "4.3.2",
+    "svelte-eslint-parser": "1.3.3",
+    "tslib": "2.8.1",
+    "typescript": "5.9.2",
+    "typescript-eslint": "8.44.1",
+    "vite": "7.1.7"
   }
 }
