--- a/.oxlintrc.json
+++ b/.oxlintrc.json
@@ -30,6 +30,7 @@
     "import/group-exports": "off",
     "import/max-dependencies": "off",
     "import/no-mutable-exports": "off",
+    "import/no-named-export": "off",
     "import/no-unassigned-import": ["error", { "allow": ["**/*.css"] }],
     "import/prefer-default-export": "off", // Conflicts with import/no-default-export
     "import/unambiguous": "off",
