--- a/.zed/settings.json
+++ b/.zed/settings.json
@@ -7,7 +7,6 @@
   "file_scan_exclusions": [
     ".git/",
     ".DS_Store",
-    ".ruby-lsp/",
     "dist/"
   ],
 
@@ -27,9 +26,7 @@
       "format_on_save": "on",
       "formatter": [
         {
-          "code_actions": {
-            "source.fixAll.eslint": true
-          }
+          "code_action": "source.fixAll.eslint"
         },
         {
           "external": {
@@ -43,9 +40,7 @@
       "format_on_save": "on",
       "formatter": [
         {
-          "code_actions": {
-            "source.fixAll.eslint": true
-          }
+          "code_action": "source.fixAll.eslint"
         },
         {
           "external": {
@@ -59,9 +54,7 @@
       "format_on_save": "on",
       "formatter": [
         {
-          "code_actions": {
-            "source.fixAll.eslint": true
-          }
+          "code_action": "source.fixAll.eslint"
         },
         {
           "external": {
