--- a/package.json
+++ b/package.json
@@ -19,29 +19,29 @@
     "@eslint/js": "9.39.1",
     "@octokit/core": "7.0.6",
     "@octokit/graphql": "9.0.3",
-    "@octokit/request-error": "7.0.2",
+    "@octokit/request-error": "7.1.0",
     "@sveltejs/vite-plugin-svelte": "6.2.1",
     "@trivago/prettier-plugin-sort-imports": "6.0.0",
-    "@tsconfig/svelte": "5.0.5",
+    "@tsconfig/svelte": "5.0.6",
     "date-fns": "4.1.0",
     "eslint": "9.39.1",
     "eslint-config-prettier": "10.1.8",
-    "eslint-plugin-oxlint": "1.25.0",
+    "eslint-plugin-oxlint": "1.29.0",
     "eslint-plugin-svelte": "3.13.0",
     "globals": "16.5.0",
     "idb": "8.0.3",
     "lightningcss": "1.30.2",
-    "oxfmt": "0.9.0",
-    "oxlint": "1.25.0",
-    "oxlint-tsgolint": "0.4.0",
+    "oxfmt": "0.14.0",
+    "oxlint": "1.29.0",
+    "oxlint-tsgolint": "0.7.1",
     "prettier": "3.6.2",
     "prettier-plugin-svelte": "3.4.0",
-    "svelte": "5.43.3",
-    "svelte-check": "4.3.3",
+    "svelte": "5.43.12",
+    "svelte-check": "4.3.4",
     "svelte-eslint-parser": "1.4.0",
     "tslib": "2.8.1",
     "typescript": "5.9.3",
-    "typescript-eslint": "8.46.3",
-    "vite": "7.1.12"
+    "typescript-eslint": "8.47.0",
+    "vite": "npm:rolldown-vite@latest"
   }
 }
