--- a/package.json
+++ b/package.json
@@ -26,22 +26,22 @@
     "date-fns": "4.1.0",
     "eslint": "9.39.1",
     "eslint-config-prettier": "10.1.8",
-    "eslint-plugin-oxlint": "1.29.0",
+    "eslint-plugin-oxlint": "1.30.0",
     "eslint-plugin-svelte": "3.13.0",
     "globals": "16.5.0",
     "idb": "8.0.3",
     "lightningcss": "1.30.2",
-    "oxfmt": "0.14.0",
-    "oxlint": "1.29.0",
-    "oxlint-tsgolint": "0.7.1",
-    "prettier": "3.6.2",
+    "oxfmt": "0.15.0",
+    "oxlint": "1.30.0",
+    "oxlint-tsgolint": "0.8.3",
+    "prettier": "3.7.1",
     "prettier-plugin-svelte": "3.4.0",
-    "svelte": "5.43.12",
+    "svelte": "5.45.2",
     "svelte-check": "4.3.4",
     "svelte-eslint-parser": "1.4.0",
     "tslib": "2.8.1",
     "typescript": "5.9.3",
-    "typescript-eslint": "8.47.0",
-    "vite": "npm:rolldown-vite@latest"
+    "typescript-eslint": "8.48.0",
+    "vite": "7.2.4"
   }
 }
