--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     "build": "vite build",
     "preview": "vite preview",
     "types": "pnpm types:typescript; pnpm types:svelte",
-    "types:typescript": "tsc --noEmit",
+    "types:typescript": "tsgo --noEmit",
     "types:svelte": "svelte-check --output=human",
     "lint": "pnpm lint:oxlint; pnpm lint:eslint",
-    "lint:oxlint": "oxlint --type-aware src/**/*.{js,ts,svelte}",
-    "lint:eslint": "eslint --concurrency=auto src/**/*.{js,ts,svelte}",
-    "format": "prettier --write index.html src/**/*.{js,ts,svelte}",
-    "format:oxfmt": "oxfmt src/**/*.{js,ts}"
+    "lint:oxlint": "oxlint --type-aware *.ts src/**/*.{ts,svelte}",
+    "lint:eslint": "eslint --concurrency=auto *.ts src/**/*.{ts,svelte}",
+    "format": "prettier --write index.html *.{js,ts} src/**/*.{js,ts,svelte}",
+    "format:oxfmt": "oxfmt *.{js,ts} src/**/*.{js,ts}"
   },
   "devDependencies": {
     "@eslint/js": "9.39.1",
@@ -23,25 +23,26 @@
     "@sveltejs/vite-plugin-svelte": "6.2.1",
     "@trivago/prettier-plugin-sort-imports": "6.0.0",
     "@tsconfig/svelte": "5.0.6",
+    "@typescript/native-preview": "7.0.0-dev.20251203.1",
     "date-fns": "4.1.0",
     "eslint": "9.39.1",
     "eslint-config-prettier": "10.1.8",
-    "eslint-plugin-oxlint": "1.30.0",
+    "eslint-plugin-oxlint": "1.31.0",
     "eslint-plugin-svelte": "3.13.0",
     "globals": "16.5.0",
     "idb": "8.0.3",
     "lightningcss": "1.30.2",
-    "oxfmt": "0.15.0",
-    "oxlint": "1.30.0",
+    "oxfmt": "0.16.0",
+    "oxlint": "1.31.0",
     "oxlint-tsgolint": "0.8.3",
-    "prettier": "3.7.1",
+    "prettier": "3.7.4",
     "prettier-plugin-svelte": "3.4.0",
-    "svelte": "5.45.2",
+    "svelte": "5.45.4",
     "svelte-check": "4.3.4",
     "svelte-eslint-parser": "1.4.0",
     "tslib": "2.8.1",
     "typescript": "5.9.3",
-    "typescript-eslint": "8.48.0",
-    "vite": "7.2.4"
+    "typescript-eslint": "8.48.1",
+    "vite": "7.2.6"
   }
 }
