--- a/package.json
+++ b/package.json
@@ -37,12 +37,12 @@
     "oxlint-tsgolint": "0.8.3",
     "prettier": "3.7.4",
     "prettier-plugin-svelte": "3.4.0",
-    "svelte": "5.45.4",
+    "svelte": "5.45.5",
     "svelte-check": "4.3.4",
-    "svelte-eslint-parser": "1.4.0",
+    "svelte-eslint-parser": "1.4.1",
     "tslib": "2.8.1",
     "typescript": "5.9.3",
     "typescript-eslint": "8.48.1",
-    "vite": "7.2.6"
+    "vite": "8.0.0-beta.0"
   }
 }
