--- a/package.json
+++ b/package.json
@@ -10,39 +10,39 @@
     "types:typescript": "tsgo --noEmit",
     "types:svelte": "svelte-check --output=human",
     "lint": "pnpm lint:oxlint; pnpm lint:eslint",
-    "lint:oxlint": "oxlint --type-aware *.ts src/**/*.{ts,svelte}",
+    "lint:oxlint": "oxlint --type-aware --type-check *.ts src/**/*.{ts,svelte}",
     "lint:eslint": "eslint --concurrency=auto *.ts src/**/*.{ts,svelte}",
     "format": "prettier --write index.html *.{js,ts} src/**/*.{js,ts,svelte}",
     "format:oxfmt": "oxfmt *.{js,ts} src/**/*.{js,ts}"
   },
   "devDependencies": {
-    "@eslint/js": "9.39.1",
+    "@eslint/js": "9.39.2",
     "@octokit/core": "7.0.6",
     "@octokit/graphql": "9.0.3",
     "@octokit/request-error": "7.1.0",
-    "@sveltejs/vite-plugin-svelte": "6.2.1",
-    "@trivago/prettier-plugin-sort-imports": "6.0.0",
+    "@sveltejs/vite-plugin-svelte": "6.2.3",
+    "@trivago/prettier-plugin-sort-imports": "6.0.2",
     "@tsconfig/svelte": "5.0.6",
-    "@typescript/native-preview": "7.0.0-dev.20251206.1",
+    "@typescript/native-preview": "7.0.0-dev.20260108.1",
     "date-fns": "4.1.0",
-    "eslint": "9.39.1",
+    "eslint": "9.39.2",
     "eslint-config-prettier": "10.1.8",
-    "eslint-plugin-oxlint": "1.31.0",
-    "eslint-plugin-svelte": "3.13.1",
-    "globals": "16.5.0",
+    "eslint-plugin-oxlint": "1.38.0",
+    "eslint-plugin-svelte": "3.14.0",
+    "globals": "17.0.0",
     "idb": "8.0.3",
     "lightningcss": "1.30.2",
-    "oxfmt": "0.16.0",
-    "oxlint": "1.31.0",
-    "oxlint-tsgolint": "0.8.3",
+    "oxfmt": "0.23.0",
+    "oxlint": "1.38.0",
+    "oxlint-tsgolint": "0.10.1",
     "prettier": "3.7.4",
-    "prettier-plugin-svelte": "3.4.0",
-    "svelte": "5.45.6",
-    "svelte-check": "4.3.4",
+    "prettier-plugin-svelte": "3.4.1",
+    "svelte": "5.46.1",
+    "svelte-check": "4.3.5",
     "svelte-eslint-parser": "1.4.1",
     "tslib": "2.8.1",
     "typescript": "5.9.3",
-    "typescript-eslint": "8.48.1",
-    "vite": "8.0.0-beta.0"
+    "typescript-eslint": "8.52.0",
+    "vite": "8.0.0-beta.5"
   }
 }
