--- a/.oxlintrc.json
+++ b/.oxlintrc.json
@@ -34,6 +34,7 @@
     "import/max-dependencies": "off",
     "import/no-mutable-exports": "off",
     "import/no-named-export": "off",
+    "import/no-relative-parent-imports": "off",
     "import/no-unassigned-import": ["error", { "allow": ["**/*.css"] }],
     "import/prefer-default-export": "off", // Conflicts with import/no-default-export
     "import/unambiguous": "off",
@@ -73,6 +74,10 @@
         // Variables defined in the TS portion, but set (using bind:this) in
         // the HTML portion will seen as unassigned
         "eslint/no-unassigned-vars": "off",
+
+        // OxLint wants to change "let" to "const", even though the variable
+        // is being reassigned by Svelte's bind:value
+        "eslint/prefer-const": "off",
 
         // When an imported component is used as a type specifier in the TS
         // portion, OxLint throws the following error:
