--- a/tsconfig.json
+++ b/tsconfig.json
@@ -39,6 +39,6 @@
     "noUncheckedIndexedAccess": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "strict": true
-  }
+    "strict": true,
+  },
 }
